--- a/assets/css/pages/galeriAdmin.css
+++ b/assets/css/pages/galeriAdmin.css
@@ -12,7 +12,6 @@
     background-color: #fff;
 }
 
-/* Header berada di atas full width */
 #header-placeholder {
     grid-column: 1 / 3;
     width: 100%;
@@ -33,11 +32,6 @@
     background: #ffffff url('assets/img/aura.png') center/cover no-repeat;
     backdrop-filter: blur(6px);
 }
-
-/* .navbar {
-    background-color: #fff !important;
-    color: black;
-} */
 
 .hero-section-admin {
     background-color: #0E1F43; 
@@ -366,5 +360,5 @@ body {
     align-items: center;
     justify-content: center;
 
-    line-height: 1; /* optional tapi membantu */
+    line-height: 1;
 }
