--- a/assets/css/pages/layanan-admin.css
+++ b/assets/css/pages/layanan-admin.css
@@ -1,8 +1,7 @@
 main, .content, .tentangKami {
-    margin-top: 83.5px; /* tinggi navbar */
+    margin-top: 83.5px;
 }
 
-/* POSISI SIDEBAR */
 .sidebar {
     width: 220px;
     position: fixed;
@@ -17,7 +16,6 @@ main, .content, .tentangKami {
     background-color: #fff !important;
 }
 
-/* Header berada di atas full width */
 #header-placeholder {
     grid-column: 1 / 3;
     width: 100%;
@@ -25,17 +23,17 @@ main, .content, .tentangKami {
 
 .content {
     position: relative;
-    margin-left: 220px;          /* mengikuti lebar sidebar */
-    width: calc(100% - 220px);   /* otomatis menyesuaikan sisa layar */
+    margin-left: 220px; 
+    width: calc(100% - 220px);
     padding: 0px;
-    margin-top: 83.5px;          /* sejajar header */
-    box-sizing: border-box;      /* biar padding tidak nambah ukuran */
+    margin-top: 83.5px;   
+    box-sizing: border-box; 
 }
 
 .layanan-foto {
     width: 100%;
-    height: 200px;
-    background-image: url("../../img/image 3.png");
+    height: 180px;
+    background: var(--primary);
     background-size: cover;
     background-position: center;
     display: flex;
@@ -49,7 +47,7 @@ h1 {
     text-shadow: 0 4px 4px rgba(0,0,0,0.6) !important;
     
 }
-/* Sarana prasaran */
+
 .Sarpras{
     padding: var(--space-7);
     position: relative;
@@ -136,7 +134,7 @@ h1 {
 .Sarpras-img {
     width: 100%;
     height: 220px;
-    background-size: contain; /* atau cover */
+    background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
     border-radius: 6px;
@@ -150,9 +148,8 @@ h1 {
     object-fit: cover;      
     border-radius: 6px;
     margin-bottom: 10px;
-    background-color: #ffffff; /* untuk dummy warna putih */
+    background-color: #ffffff;
 }
-
 
 .button-container {
     justify-content: center;
@@ -217,7 +214,7 @@ h1 {
 }
 .layanan-wrapper {
     display: grid;
-    grid-template-columns: repeat(3, 1fr); /* 3 kolom */
+    grid-template-columns: repeat(3, 1fr);
     gap: 10px;
     width: 100%;
     justify-items: center;
@@ -226,8 +223,8 @@ h1 {
 .layanan-card {
     background: var(--primary);
     color: var(--background);
-    max-width: 240px;   /* batas maksimal */
-    width: 100%;        /* biar mengecil mengikuti grid */
+    max-width: 240px;
+    width: 100%;
     min-height: 360px;
     border-radius: var(--radius-md);
     display: flex;
@@ -253,9 +250,8 @@ h1 {
     line-height: 1.6;
     margin-bottom: var(--space-5);
 
-    /* Truncate multiline */
     display: -webkit-box;
-    -webkit-line-clamp: 11;     /* jumlah baris yg ditampilkan */
+    -webkit-line-clamp: 11;
     -webkit-box-orient: vertical;
     overflow: hidden;
     text-overflow: ellipsis;
