--- a/assets/css/pages/navbar.css
+++ b/assets/css/pages/navbar.css
@@ -188,19 +188,28 @@ body:not(.no-header) {
     }
 
     .nav-menu {
-        position: absolute;
-        top: 100%;
+        position: fixed;
+        top: 70px;
         right: 0;
+        left: 0;
+
         background: rgba(255,255,255,0.98);
         backdrop-filter: blur(6px);
+
         flex-direction: column;
         align-items: flex-start;
         gap: 16px;
+
         padding: 20px;
-        width: 220px;
+        width: 100%;
+        max-height: calc(100vh - 70px);
+        overflow-y: auto;
+
         box-shadow: 0 8px 20px rgba(0,0,0,0.15);
         display: none;
+        z-index: 99998;
     }
+
 
     .nav-menu li {
         width: 100%;
@@ -240,5 +249,62 @@ body:not(.no-header) {
 
     .nav-menu {
         width: 100%;
+    }
+}
+
+.nav-toggle {
+    display: none;
+    font-size: 26px;
+    cursor: pointer;
+    user-select: none;
+    color: black;
+}
+
+@media (max-width: 1024px) {
+
+    .nav-toggle {
+        display: block;
+    }
+
+    .nav-menu {
+        display: none;
+    }
+
+    .nav-menu.active {
+        display: flex;
+    }
+}
+
+@media (max-width: 1024px) {
+    .nav-menu {
+        position: fixed;
+        top: 83.5px;
+        left: 0;
+        right: 0;
+
+        background: rgba(255,255,255,0.98);
+        backdrop-filter: blur(6px);
+
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 16px;
+
+        padding: 20px;
+        width: 100%;
+        max-height: calc(100vh - 70px);
+        overflow-y: auto;
+
+        box-shadow: 0 8px 20px rgba(0,0,0,0.15);
+        z-index: 99998;
+    }
+}
+
+@media (max-width: 1024px) {
+    .dropdown:hover .dropdown-menu {
+        display: none;
+    }
+
+    .dropdown.active .dropdown-menu {
+        display: block;
     }
 }
